# trend-detection

./: .gitignore  README.md  pyproject.toml
data/sample1/: signal2.csv  signal3.csv
notebooks/: playground.ipynb
