[tool.poetry]
name = "trend-detection"
version = "0.1.0"
description = "Trend Detection"
authors = ["Christof Tinnes <christof.tinnes@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
fastdtw = "^0.3.4"
kagglehub = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
